name:                matrix-marks
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Jason Dagit
maintainer:          dagitj@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable matrix-marks
  main-is:             MatrixMarks.hs
  hs-source-dirs:      src
  -- other-modules:       
  build-depends:       base < 5
                     , lin-alg
                     , hmatrix
                     , criterion
  extra-lib-dirs: /usr/lib, /opt/local/lib
